fixed spacing on home page buttons and updated some links

--- a/src/components/template/index.module.css
+++ b/src/components/template/index.module.css
@@ -10,5 +10,8 @@
     margin-right: 1em ;
 }
 
+#contact-box *{
+    color: #a7a39c
+}
 
 
